--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=API.db"
+    "DefaultConnection": "Data source=API.db"
   },
-
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
